tests/fixtures/security/certs/invalid/invalid_role.store
store_id=invalid-role-store
store_version=1
updated_at_utc=2026-03-11T08:30:00Z
record|roots|1111111111111111111111111111111111111111111111111111111111111111|CN=Root CA|CN=Root CA|root|2026-01-01T00:00:00Z|2036-01-01T00:00:00Z|1000
record|device_certs|3333333333333333333333333333333333333333333333333333333333333333|CN=Media Server|CN=Root CA|intermediate|2026-01-01T00:00:00Z|2028-01-01T00:00:00Z|1002
